# gtest-typedfiles

./: .gitignore  CMakeLists.txt  readme.md  vcpkg.json
.github/workflows/: c-cpp.yml
doc/: Doxyfile
doc/source/markdown/: configuration.md  getting_started.md
res/: example_config.yaml
src/: CMakeLists.txt
src/backend/: CMakeLists.txt
src/backend/include/: ConfigObject.hpp  Configuration.hpp  ConfigurationCommon.hpp  ConfigurationFromYaml.hpp  DynamicFile.hpp  TestSuite.hpp
src/backend/src/: ConfigObject.cpp  Configuration.cpp  ConfigurationCommon.cpp  ConfigurationFromYaml.cpp  DynamicFile.cpp  TestSuite.cpp
src/cli/: CMakeLists.txt  main.cpp
test/backend/: CMakeLists.txt  Configuration.cpp  DynamicFile.cpp  yaml_parser.cpp
tooling/: build.sh  init_vcpkg.sh
